[30.December 2008]
- map.rb: fixed painting on Surface with clip (I didn't probably understand 
          well what clip is...)

[29.December 2008]
- entity.rb: attribute 'location' added
- rect3.rb: added method Rectangle#point_inside?

[26.December 2008]
- rudlmore.rb: copied from freeVikings
- image.rb: mirroring methods added
- model.rb: Model#add_pair: possibility to switch off check of sizes

[22.December 2008]
- spritemanager.rb: SpriteManager#update removed, #each added

[19.December 2008]
- spritesheet.rb: simple support for spritesheets
- animation.rb: fixed one ancient error

[15.December 2008]
- tiledmaploadstrategy.rb: possibility to switch off displaying of a layer
  (layer property 'display' with value 'no' or 'false')

[12.December 2008]
- rect3.rb: further optimization of rect2.rb:
  Rectangle#right and #bottom aren't computed dynamically, they are
  implemented as numeric variables updated each time other internals are
  changed; Rectangle#collides? is also optimized a bit
- rect2.rb, rect3.rb: Rectangle#== repaired
- rect.rb: isolated in module SchwerEngine::Old
- tests/testrectN.rb: test cases for all three Rectangle classes
- relativerect.rb: is child of Old::Rectangle
- map.rb: 
    Map#area_free?: area out of map isn't free
    Map#pixels_to_tiles: less tests (done by area_free?)
- group.rb: Group#members_on_rect yields members which collide with the given 
  rect, so it is possible to decrease number of iterations over Arrays 
  in the application
- rect3.rb: Rectangle#move()

[11.December 2008]
- rect2.rb: repaired methods at, [], []=

[7.December 2008]
- entity.rb: added z (layer index)
- rect2.rb: attempt to optimize Rect without compiled extensions by replacing
  internal Array with 4 Numeric variables

[24.November 2008]
- rect.rb: added method Rectangle#expand2 (and ! variant);
  methods to get coordinates of corners
- tests/mockclasses.rb: TestingMapLoadStrategy modified so that I might
  define new map inside the test