@@ -1,3 +1,6 @@
+[31.December 2008]
+- relativerect.rb: added method point_inside?
+
 [30.December 2008]
 - map.rb: fixed painting on Surface with clip (I didn't probably understand 
           well what clip is...)
